<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="repo"
            type="com.dawn.dtos.gitHubSearch.RepoDetailsView" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:transitionName="@string/repo_item_detail_transition_name"
        tools:context=".ui.GitHubRepoDetailFragment">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:background="@android:color/transparent"
            android:padding="23dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back" />


        <ImageView
            android:id="@+id/githubAvatar"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="24dp"
            app:imageUrl="@{repo.owner.avatar}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_btn"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/repoName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/open_sans_bold"
            android:gravity="center"
            android:text="@{repo.fullName}"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/githubAvatar"
            tools:text="GitHUbSearch/Repo" />

        <TextView
            android:id="@+id/repoLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/open_sans_regular"
            android:text="@{repo.language}"
            android:textColor="@color/grey"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repoName"
            tools:text="Javascript" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="34dp"
            android:padding="14dp"
            android:background="@drawable/borderd_background"
            android:transitionName="@string/repo_item_detail_transition_name"
            app:layout_constraintTop_toBottomOf="@+id/repoLanguage"
            tools:layout_editor_absoluteX="34dp">


            <TextView
                android:id="@+id/forkTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/forks"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/forkValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="42dp"
                android:fontFamily="@font/open_sans_regular"

                android:text="@{Integer.toString(repo.forks)}"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/forkTitle"
                tools:text="654" />

            <View
                android:id="@+id/forkDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forkTitle" />

            <TextView
                android:id="@+id/issuesTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/issues"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forkDivider" />

            <TextView
                android:id="@+id/issuesValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="42dp"
                android:fontFamily="@font/open_sans_regular"
                android:text="@{Integer.toString(repo.issuesCount)}"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forkDivider"
                tools:text="654" />

            <View
                android:id="@+id/issuesDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/issuesTitle" />


            <TextView
                android:id="@+id/starsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/starred_by"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/issuesDivider" />

            <TextView
                android:id="@+id/starsValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="42dp"
                android:fontFamily="@font/open_sans_regular"
                android:text="@{Integer.toString(repo.starredCount)}"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/issuesDivider"
                tools:text="654" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--    <View-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="1dp"-->
        <!--        android:layout_marginStart="16dp"-->
        <!--        android:layout_marginTop="8dp"-->
        <!--        android:layout_marginEnd="16dp"-->
        <!--        android:background="@color/grey"-->
        <!--        app:layout_constraintEnd_toEndOf="parent"-->
        <!--        app:layout_constraintStart_toStartOf="parent"-->
        <!--        app:layout_constraintTop_toBottomOf="@+id/forkTitle" />-->


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>